Sun Jan  9 16:11:39 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * Merge patches from Josip Rodin:
    + various text and manpage updates
    + dselect/method.cc: don't abort if locking fails but give a
      warning
    + THANKS: fix various small errors 

Sun Jan  9 01:40:23 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * scripts/cl-debian.pl: Allow space between `#' and the bugnumber in the
    changelog scripts
  * scripts/start-stop-daemon.c: test for __sparc__ instead
  * scripts/Makefile.in: add optlib to CFLAGS
  * utils/start-stop-daemon.c: add option to chroot first, patch from Marco d'Itri
  * utils/start-stop-daemon.8: document chroot option
  * dselect/pkgtop.cc: use waddnstr to print package description instead of waddch

Fri Jan  7 18:24:45 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * dselect/method.cc: pass admindir to dpkg
  * dselect/Makefile.in: fix rule to build helpmessages
  * dselect/curkeys.h: use curses.h instead of ncurses.h, since someone
    decided to play nasty and just remove that
  * scripts/: remove dpkg-safelist
  * dpkg-deb/build.c: remove dpkg-safelist calls
  * main/enquiry.c: redo formula to get fieldwidths for packages

Wed Jan  5 17:09:45 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * Merge patch from Tom Lees <tom@lpsg.demon.co.uk>:
    + scripts/dpkg-buildpackage.sh: support debsign
  * scripts/update-alternatives.8: fix wrong order of parameters
    in ACTION section
  * Updated Polish translation

Sun Dec 26 01:31:08 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * Update copyright for Swedish translation to SPI instead of Debian

Sat Dec 25 04:04:48 CET 1999 Wichert Akkerman <wakkerma@debian.org>

  * dselect/pkgtop.cc: use waddnstr instead of waddch so we don't strip
    the 8th bit of characters
  * Replace `Debian Linux' with `Debian GNU/Linux' in some more places
  * Update Spanish translation
  * main/enquire.c: always use a minimum width of 80 in list1package