@@ -1,3 +1,14 @@
+Tue Jan 11 02:02:00 CET 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * dselect/baselist.cc: don't specify SA_INTERRUPT, since it's
+    not portable and the default behaviour
+  * main/enquiry.c: include sys/termios.h (needed on Solaris)
+  * lib/lock.c: use EACCESS instead of EWOULDBLOCK
+  * dselect/main.cc: fix help for -D
+  * dselect/main.cc: try to lock admindir instead of using readwrite
+  * dselect/method.cc: switch to using fcntl for lock since that is more
+    portable, and revamp lockingcode to reduce code duplication
+
 Sun Jan  9 16:11:39 CET 2000 Wichert Akkerman <wakkerma@debian.org>
 
   * Merge patches from Josip Rodin:
